Remove POS dependency
